# tino

./: .gitignore  .prettierrc.json5  Cargo.toml  Dockerfile  README.md  app.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  project.clj  shadow-cljs.edn
.github/workflows/: publish.yml  test.yml
api/: bot.js
scripts/: build.js
src/: error.rs  lib.rs  main.rs  model.rs  tio.rs
src/app/api/bot/: route.js
src/test_data/: hello_world.txt  langs.txt
src/tino/: core.cljs
