[package]
name = "tino"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
clap = { version = "4.5.31", features = ["cargo", "derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
serde = "1.0.218"
serde_json = "1.0.139"
teloxide = { version = "0.13.0", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
  "webhooks-axum",
] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
snapbox = "0.6.20"
