[package]
name = "tino"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.39", features = ["cargo", "derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.1.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
serde = "1.0.219"
serde_json = "1.0.140"
teloxide = { version = "0.15.0", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
  "webhooks-axum",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
snapbox = "0.6.20"
