[package]
name = "tino"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["cargo", "derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.1.5"
regex = "1.12.2"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
serde = "1.0.219"
serde_json = "1.0.148"
teloxide = { version = "0.17.0", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
  "webhooks-axum",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
snapbox = "0.6.23"
